# keste

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github-backup/: PULL_REQUEST_TEMPLATE.md
.github-backup/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github-backup/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD.md  CELL_SELECTION.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  CRITICAL_FIXES_SUMMARY.md  DEBUG-IMPORT.md  DEV_MODE.md  DOCUMENTATION_REORGANIZATION.md  FORMULA_DEBUG_SUMMARY.md  FORMULA_ENGINE_INVESTIGATION.md  FORMULA_TESTING_INSTRUCTIONS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SETUP.md  TECHNICAL_DEBT.md
docs/product/: PRD-2.md  PRD-EXCEL-IMPORT-100.md  PRD.md  PROGRESS.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: cmds.rs  main.rs  sqlite_reader.rs  sqlite_writer.rs
src/components/: BorderPicker.tsx  ChangeTracker.tsx  ChartBuilder.tsx  ChartRenderer.tsx  ColumnHeader.tsx  CommentIndicator.tsx  CommentPanel.tsx  CommentThread.tsx  ConditionalFormattingDialog.tsx  DataValidationDialog.tsx  Dropzone.tsx  EditableCell.optimized.tsx  EditableCell.tsx  EditableGridView.tsx  ErrorBoundary.tsx  ExportBar.tsx  FilterDialog.tsx  FindReplaceDialog.tsx  FormulaBar.tsx  FormulaLibrary.tsx  GridView.tsx  KeyboardShortcutsDialog.tsx  NameManager.tsx  NumberFormatPicker.tsx  PerformanceMonitor.tsx  SheetNav.tsx  SheetTabs.tsx  (+1 more)
(+26 files in other folders)
