[package]
name = "keste"
version = "0.1.0"
description = "Modern spreadsheet editor powered by SQLite"
authors = ["Saken Tukenov"]
license = "MIT"
repository = "https://github.com/stukenov/keste"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
